# vanta

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/vanta-ast/: Cargo.toml
crates/vanta-ast/src/: class.rs  field.rs  function.rs  import.rs  lib.rs  mutability.rs  pack.rs  program.rs  types.rs  visibility.rs
crates/vanta-ast/src/class/: class_decl.rs  mod.rs  tests.rs
crates/vanta-ast/src/expr/: assignment.rs  call.rs  identifier.rs  literal.rs  mod.rs  property_access.rs  return_expr.rs  tests.rs
crates/vanta-ast/src/function/: function_decl.rs  mod.rs  param.rs  tests.rs
crates/vanta-cli/: Cargo.toml
crates/vanta-cli/src/: main.rs
crates/vanta-cli/src/pipeline/: build.rs  codegen.rs  lowering.rs  mod.rs  parse.rs  semantic.rs
crates/vanta-cli/src/validation/: entry_file.rs  mod.rs  project_context.rs
crates/vanta-codegen-llvm/: Cargo.toml
crates/vanta-codegen-llvm/src/codegen/: codegen.rs  function_codegen.rs  instruction_codegen.rs  mod.rs  module_codegen.rs
crates/vanta-codegen-llvm/src/codegen/tests/: call_codegen_tests.rs  function_codegen_tests.rs  mod.rs  module_codegen_tests.rs
crates/vanta-diagnostics/: Cargo.toml
crates/vanta-diagnostics/src/error/: diagnostic.rs  mod.rs  tests.rs
crates/vanta-ir/: Cargo.toml
crates/vanta-ir/src/: lib.rs
crates/vanta-lexer/: Cargo.toml
crates/vanta-lexer/src/: lib.rs
crates/vanta-lowering/: Cargo.toml
crates/vanta-lowering/src/: lib.rs
crates/vanta-parser/: Cargo.toml
crates/vanta-sema/: Cargo.toml
examples/: main.vt
examples/codegen-llvm/: main.vt
(+59 files in other folders)
