[workspace]
members = [
    "crates/vanta-cli",
    "crates/vanta-ast",
    "crates/vanta-lexer",
    "crates/vanta-parser",
    "crates/vanta-diagnostics",
    "crates/vanta-sema",
    "crates/vanta-codegen-llvm",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Seu Nome"]

[workspace.dependencies]
thiserror = "2.0.18"
anyhow = "1.0.102"