[package]
name = "vanta-codegen-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vanta-ir = { path = "../vanta-ir" }
vanta-diagnostics = { path = "../vanta-diagnostics" }
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
